--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,3 +1,7 @@
 PORT=3000
 
 DB_URI = "mongodb+srv://admin:admin@cluster0.w4nnttn.mongodb.net/Ecommerce"
+
+JWT_SECRET=JAISHREERAMJAISHREEKRISHNARADHERADHE
+
+JWT_EXPIRE=5d
