--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -5,3 +5,5 @@ DB_URI = "mongodb+srv://admin:admin@cluster0.w4nnttn.mongodb.net/Ecommerce"
 JWT_SECRET=JAISHREERAMJAISHREEKRISHNARADHERADHE
 
 JWT_EXPIRE=5d
+
+COOKIE_EXPIRE=5
