"authentication and error handling completed""

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -7,3 +7,13 @@ JWT_SECRET=JAISHREERAMJAISHREEKRISHNARADHERADHE
 JWT_EXPIRE=5d
 
 COOKIE_EXPIRE=5
+
+SMTP_SERVICE = gmail
+
+SMTP_MAIL = dharmadhikarianurag61@gmail.com
+
+SMTP_PASSWORD = ufeh owgk gzlr qxkc
+
+SMTP_HOST = smtp.gmail.com
+
+SMTP_PORT = 465
